# study-notes

./: .gitignore
real-world-haskell/: ch1.md  ch2.md  ch3.md  ch5.md  ch7.md
real-world-haskell/ch1/: WC.hs
real-world-haskell/ch2/: ex2.md
real-world-haskell/ch5/: Main.hs
real-world-haskell/ch5/json/: json.cabal
real-world-haskell/ch5/json/src/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
real-world-haskell/ch7/: actions.hs  actions2.hs  basicio-nodo.hs  callingpure.hs  return2.hs  return3.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs
