name:                json
version:             0.1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prettify
                       PrettyJSON
                       SimpleJSON
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
